# l2d-movie-maker

./: .npmrc  AGENTS.md  AUDIO_RECORDING_IMPROVEMENTS.md  CLAUDE.md  COMPONENT_SPLITTING_SUMMARY.md  MODEL_FRAME_RECORDING.md  MODEL_USAGE.md  MOUTH_ANIMATION_TEST.md  README.md  RECORDING_GUIDE.md  RECORDING_RANGE_GUIDE.md  TIMELINE_STYLE_UPDATE.md  WEBGAL_MODEL_CLEANUP.md  WEBGAL_MODE_UPDATE.md  demo.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
public/model/: _manifest.json
public/model/soyo/: model.json
public/model/爱音兔女郎/: model.json
scripts/: gen-model-index.mjs
server/: server.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: media.rs  mod.rs  models.rs  server.rs  webgal.rs
src/components/: AudioManager.tsx  ExportToolbar.tsx  Live2DView.css  Live2DView.tsx  ModelManager.tsx  RecordingBounds.tsx  RecordingControls.tsx  RecordingManager.tsx  WebGALMode.css  WebGALMode.tsx  WebGALModelManager.tsx
src/components/panel/: CharacterPanel.tsx  ControlPanel.tsx  ParameterEditor.tsx
src/components/timeline/: Timeline.tsx  clipTypes.ts  types.ts
src/config/: ports.ts
src/types/: character.ts  parameterEditor.ts
src/utils/: alphaFilter.ts  ffmpegTranscode.ts  fs.ts  jsonlLoader.ts  modelScanner.ts  motionDuration.ts  numberFormat.ts  offlineExporter.ts  parseMtn.ts  partScreenshot.ts  partsExporter.ts  recorder.ts  userModels.ts  webgalParser.ts  webgalProject.ts  webgalScript.ts
(+40 files in other folders)
